added acknowledgements section

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1126,6 +1126,13 @@ By accounting for the genomic heterogeneity that is expected due to incomplete l
 
 Inference of genealogies along a chromosome is a common goal in population genetics, and similar efforts have been undertaken in phylogenetics. Often, the goal of such efforts is to detect signals of introgression or selection. However, the phylogenetic approaches usually do not explicitly incorporate a model for recombination \citep[e.g.,][]{li2019recombination}. Applications of our solutions might provide valuable null hypotheses of genealogical turnover rates by which introgression or selection might be detected. Beyond its use for detecting patterns resulting from non-neutral processes, incorporating recombination in phylogenetic-scale models could also help improve species tree inference. For example, to the extent that they are observable, the empirical distribution of waiting distances to topology changes might be inferred and compared against the expected waiting distances for a proposed species tree model (e.g., \textbf{Figure 5}). Further approaches could determine the distribution of waiting distances to specific types of topology changes, such as those that split up a focal clade.
 
+
+\subsubsection{Acknowledgements}
+This work was supported by the National Science Foundation 
+(NSF DEB-2046813 awarded to D.A.R.E. and \hl{NSF GRFP awarded 
+to P.F.M.). Thanks to ... for feedback on ...}
+
+
 %\subsection{Citations}
 %Citations use \verb+natbib+. The documentation may be found at
 %\begin{center}
