--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -75,7 +75,7 @@ Keywords: Recombination, Phylogeny, SMC, Gene Tree, Species Tree, Concatalescenc
 
 \section*{Abstract}
 Genomes are composed of a mosaic of segments inherited from different ancestors, 
-each separated by past recombination events, and consequently, genealogical
+each separated by past recombination events. Consequently, genealogical
 relationships among multiple genomes vary spatially across different genomic 
 regions. Expectations for the amount of genealogical variation among unlinked 
 (uncorrelated) genomic regions is well described for either a single 
@@ -128,18 +128,23 @@ the rate of coalescence, and can vary among different lineages.
 \begin{figure}
 	\centering
 	%\fbox{\rule[-.5cm]{4cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
-	\includegraphics[width=0.99\textwidth]{figures/Fig3-parameters-extend.pdf}
+	\includegraphics[width=0.99\textwidth]{figures/Fig3-parameters-extend-PFM1.pdf}
 	\caption{A gene tree embedded in a species tree. 
-	(a) Species tree divergence times ($W$) separate
-	intervals, each of which can have different effective population sizes ($N_b$),
-	which determine rates of coalescence in each interval. Viewed backwards in time, 
-	coalescent events (e.g., $t_7$) reduce the number of samples, whereas species tree
-	divergence events (e.g., $W_{AB}$) increase the number of samples present. 
+	(a) Species tree divergence times ($W$) define ancestral populations. The population 
+	structure constrains which lineages of the genealogy can coalesce. Further, each 
+	population which can have a different effective population size ($N_b$),
+	which determine rates of coalescence within that population. Viewed backwards in time, 
+	coalescent events (e.g., $t_7$) in the genealogy reduce the number of samples, whereas 
+	species tree divergence events (e.g., $W_{AB}$) increase the number of samples present. 
 	(b-d) Recombination is modeled by detaching a branch at a specific time and 
 	sampling a waiting time until it re-coalesces, leading to either no change, 
-	a tree change (edge lengths), or topology change. Edges 2, 5, and 7 span multiple
-	intervals where coalescent rates change, leading to different probabilities of
-	outcomes (discussed in text). See Table 1 for the full gene tree embedding table.
+	a tree change (edge lengths), or topology change. We arbitrarily selected edges 2, 5, and 
+	7 to illustrate how piecewise variation in coalescent rates back in time through the 
+	species tree leads to changing probabilities of each
+	outcome (discussed in Demonstration). Note that the values in (b) and (c) must sum to 1, 
+	since one of those two events must happen, while (d) is showing the probabilities of a 
+	subset of the events in (c). See Table 1 for the full gene tree embedding table for this 
+	example.
 	}
 	\label{fig:fig1}
 \end{figure}
@@ -1054,13 +1059,16 @@ with reproducible examples implemented in jupyter notebooks.
 % We adapted our solutions to python code, and we implemented them alongside the phylogenomic simulation package \emph{ipcoal} (an MSC-focused wrapper for the popular population genomic simulator \emph{msprime}) \citep{mckenzie_ipcoal_2020,baumdicker_efficient_2022}. Doing so facilitated three simple, illustrative analyses.
 
 % First, when given a species tree and initial genealogy, we could examine the probability 
-First, given a species tree model and initial genealogy we can visualize the 
+First, given a species tree model and initial genealogy, we can visualize the 
 probabilities of different types of outcomes of recombination as a 
 function of the position (time) on a genealogy branch where a recombination 
-event occurs (Fig.~\ref{fig:fig1}b-d). As an example, we show probabilities along
-three selected edges of a genealogy embedded in a species tree model, where the 
-species tree is an imbalanced topology with equal internal node distances of 2.5e5
-generations, and a constant effective population size of 2e5 in all intervals.
+event occurs (Fig.~\ref{fig:fig1}). As an example, we show probabilities along
+three selected edges of a genealogy embedded in a species tree model. Our species 
+tree was proposed arbitrarily with a root height of 1e6 generations and 
+includes branch-specific N values. Our sampling in the genealogy includes three individuals
+for population A, two individuals for population B, and one individual for each 
+population C and D. The exact parameterization for the model, as well as the 
+code to replicate the analysis, is documented in our supplementary notebooks.
  % tree model 
 % of changes in the genealogy given a recombination event on a specific branch and at a 
 % specific time. \textbf{Figure 3} illustrates the selection of three branches from a genealogy 
@@ -1073,46 +1081,71 @@ generations, and a constant effective population size of 2e5 in all intervals.
 % and had 
 % with constant Ne of 2e5 across species tree intervals. 
 % Parts 
-\hl{I left off here, since fig3/fig1 updates are in progress.}
-Panels b, c, and d show the probability that a recombination event falling at each 
-time on the 3 selected genealogy branches does not change the topology (i.e., 
-the branch lengths might change, but the topology remains the same) and does not 
-change the tree (i.e., both the branch lengths and topology remain unchanged). 
-These results make clear that recombination events falling at the tops of branches 
+%\hl{I left off here, since fig3/fig1 updates are in progress.}
+Fig.~\ref{fig:fig1} panels b, c, and d show the probability that a recombination event 
+falling at each time $t_r$ on the 3 selected genealogy branches results in no change 
+(b), results in a tree change (c), and results in a topology change (d).  
+The tendency of the y-values in (b) to approach 0 and (c) to approach 1 as x-values increase 
+make clear that recombination events falling at the tops of branches 
 (i.e., far right on the x-axis) are increasingly certain to change the branch lengths 
-of the genealogy, since any re-coalescence of the detached branch can only occur above
-the recombination breakpoint. This also makes clear that recombination events 
-occurring when there are only two lineages remaining are certain to not change 
-the topology, since the two lineages are only able to re-coalesce with each other 
-(as shown in the upper panels of c and d). 
+of the genealogy. This is because any re-coalescence of the detached branch can only occur 
+above the recombination breakpoint. The values in part (d), however, never approach 1 (i.e. 
+certain to produce a topology change). This is because re-coalescence with the parent branch, 
+which would not result in a topology change, is still possible even if 
+a recombination event occurs at the very top of a focal branch. 
 
-\begin{figure}
-	\centering
+%\begin{figure}
+%	\centering
 	%\fbox{\rule[-.5cm]{4cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
-	\includegraphics[width=0.9\textwidth]{figures/Fig4-bt_prob.pdf}
-	\caption{Probability that the topology and the tree remain unchanged, given a recombination event at a specific time on a specific branch. The species tree (a) was arbitrarily parameterized as being unbalanced with 5 tips, having internode distances of 2.5e5, and having constant Ne of 2e5. The embedded genealogical tree was randomly generated by \emph{ipcoal} using MSC probabilities. We selected three branches, indicated by three different colors, across which we calculated the probability that the topology would remain unchanged and the tree would remain unchanged if a recombination event were to occur at each time point on the branch (b-d). Dashed lines indicate the beginning and ending times of different intervals on each branch -- that is, either a relevant species tree divergence event or genealogy coalescence event.}
-	% \label{fig:fig2}
-\end{figure}
+%	\includegraphics[width=0.9\textwidth]{figures/Fig4-bt_prob.pdf}
+%	\caption{Probability that the topology and the tree remain unchanged, given a recombination event at a specific time on a specific branch. The species tree (a) was arbitrarily parameterized as being unbalanced with 5 tips, having internode distances of 2.5e5, and having constant Ne of 2e5. The embedded genealogical tree was randomly generated by \emph{ipcoal} using MSC probabilities. We selected three branches, indicated by three different colors, across which we calculated the probability that the topology would remain unchanged and the tree would remain unchanged if a recombination event were to occur at each time point on the branch (b-d). Dashed lines indicate the beginning and ending times of different intervals on each branch -- that is, either a relevant species tree divergence event or genealogy coalescence event.}
+%	 \label{fig:fig3}
+%\end{figure}
 
-Next, we tested the effect of variation in basic species tree parameters on expected waiting distances to tree changes and topology changes (\textbf{Figure 4}). We started with four different species trees: two imbalanced and two balanced. For each pair, there is a large tree (10 tips), and a small tree (5 tips) pruned from the large tree, with internode distances kept the same. On each species tree, we generated 1000 random MSC genealogies using each of 9 different Ne values, ranging from 50000 to 250000. We calculated the expected waiting distance to a tree change and to a topology change for each genealogy/species tree pair, assuming a recombination rate of 1e-9 recombs/bp/generation. In Figure 4, we show the mean expected waiting distances to tree and topology changes for each species tree and for each Ne value. The decline in expected waiting distances across Ne values and from small to large trees demonstrates that, on average, waiting distances to tree and topology changes decrease with increasing numbers of tips sampled and with increasing Ne values. 
+Next, we tested the effect of variation in basic species tree parameters on expected waiting 
+distances to tree changes and topology changes (Fig.~\ref{fig:fig3}). We started with four 
+different species trees: two imbalanced and two balanced. For each pair, we used a large tree 
+(10 tips), and a small tree (5 tips) that was pruned from the large tree, with internode 
+distances kept the same. On each species tree, we generated 1000 random \emph{unlinked} 
+genealogies using MSC probabilities and using 
+each of 9 evenly spaced Ne values, ranging from 50000 to 250000. We calculated the expected 
+waiting distance 
+to a tree change and to a topology change for each genealogy/species tree pair, assuming a 
+recombination rate of 1e-9 recombs/bp/generation. In Fig.~\ref{fig:fig3}, we show the mean 
+expected waiting distances to tree and topology changes for each species tree and for each Ne 
+value. The decline in expected waiting distances across Ne values and from small to large 
+trees demonstrates that, on average, waiting distances to tree and topology changes decrease 
+with increasing numbers of tips sampled and with increasing Ne values. 
 
 \begin{figure}
 	\centering
 	%\fbox{\rule[-.5cm]{4cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
 	\includegraphics[width=0.9\textwidth]{figures/Fig5-waiting_times_ne_means.pdf}
 	\caption{Mean expected waiting distances for differently parameterized species tree models. We used four different species trees: two 10-tip trees (a, b), each with 1e6-generation root heights, and two 5-tip trees (c, d) that are subselected from each of the larger trees. For each species tree, we iterated over 9 Ne values ranging from 50000 to 250000, generating 1000 unlinked MSC genealogies at each Ne value and calculating the expected waiting distance to a tree change and to a topology change for each. The mean of the expected waiting distances at each Ne value is presented in the scatterplot accompanying each species tree. Note that the y-axis scale changes from the top row (a, b) to the bottom row (c, d).}
-	% \label{fig:fig3}
+	 \label{fig:fig3}
 \end{figure}
 
 
-Finally, we demonstrated that a known sequence of genealogies paired with the accompanying observed waiting distances to next topological change for each can be used to estimate the Ne value for species trees with different topologies (\textbf{Figure 5}). We used two different species trees: one imbalanced, 5-tip tree with internode branches of equal length, and one 10-tip tree with an irregular topology and branches of variable lengths. Both species trees were assigned equal root heights of 1e6 generations and equal Ne values of 150000 on all branches, and we simulated a 5e6-bp chromosome for each using \emph{ipcoal}. We broke each chromosome down into its component "initial genealogies" -- those that start each segment bounded by changes in topology -- and the accompanying segment lengths (i.e. waiting distances). Using these values and a known recombination rate of 1e-9 recombs/bp/generation, we calculated the likelihood that each of 41 proposed Ne values produced the set of genealogies and waiting distances. Using this approach, we recovered a correctly inferred Ne value of 150000 for both trees.
+Finally, we demonstrated that a known sequence of genealogies paired with the accompanying
+observed waiting distances to next topological change for each can be used to estimate the 
+Ne value for species trees with different topologies (Fig.~\ref{fig:fig4}). We used two 
+different species trees: one imbalanced, 5-tip tree with internode branches of equal length,
+and one 10-tip tree with an irregular topology and branches of variable lengths. Both species 
+trees were assigned equal root heights of 1e6 generations and equal Ne values of 150000 on all 
+branches, and we simulated a 5e6-bp chromosome for each using \emph{ipcoal}. We broke each 
+chromosome down into its component "initial genealogies" -- those that start each segment 
+bounded by changes in topology -- and the accompanying segment lengths (i.e. waiting 
+distances). Using these values and a known recombination rate of 1e-9 recombs/bp/generation, 
+we calculated the likelihood that each of 41 proposed Ne values produced the set of 
+genealogies and waiting distances. Using this approach, we recovered a correctly inferred Ne 
+value of 150000 for both trees.
 
 \begin{figure}
 	\centering
 	%\fbox{\rule[-.5cm]{4cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
 	\includegraphics[width=0.9\textwidth]{figures/Fig6-constant_ne_inf.pdf}
 	\caption{Inference of species tree Ne values from genealogies, observed waiting distances to topology changes, and recombination rate. We generated two different species trees: Both have root heights of 1e6 generations, but one has five tips, an unbalanced topology, and identical internode lengths, while the other has ten tips, an irregular topology, and irregular branch lengths. Using a recombination rate of 1e-9 recombs/bp/generation and a constant Ne value of 150000 over all branches, we generated a 5MB tree sequence from each species tree using \emph{ipcoal}. Then, we decomposed the alignment into segments bounded by topology changes in the genealogies, and we recorded the initial genealogy for each segment. Finally, we calculated the likelihood of the set of genealogies and waiting distances, along with the recombination rate, at 41 different proposed Ne values. For both sequence alignments, 150000 was correctly inferred as the Ne value.}
-	% \label{fig:fig4}
+	 \label{fig:fig4}
 \end{figure}
 
 \section{Conclusions}
