--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -44,10 +44,11 @@
 %%% Once the PDF is generated, you can check the metadata with
 %%% $ pdfinfo template.pdf
 \hypersetup{
-	pdftitle={Waiting Distances Between Genealogy Changes under a Multi-Species Extension of the Sequentially Markovian Coalescent},
+	pdftitle={Estimating Waiting Distances Between Genealogy Changes under a 
+		Multi-Species Extension of the Sequentially Markov Coalescent},
 	pdfsubject={Evolutionary biology},
 	pdfauthor={Patrick F. ~McKenzie},
-	pdfkeywords={First keyword, Second keyword, More},
+	pdfkeywords={Recombination, Phylogeny, SMC, Gene Tree, Species Tree, Concatalescence, ARG},
 }
 
 % \renewcommand{\shorttitle}{MSC Waiting Distance Distribution}
